broken poi