@@ -51,9 +51,9 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.0</version>
+                <version>3.8.1</version>
                 <configuration>
-                    <release>11</release>
+                    <release>16</release>
                 </configuration>
             </plugin>
             <plugin>
@@ -67,6 +67,12 @@
                         <id>default-cli</id>
                         <configuration>
                             <mainClass>pl.tbs.App</mainClass>
+                            <options>
+                                <option>--add-exports</option>
+                                <option>javafx.graphics/com.sun.javafx.scene=org.controlsfx.controls</option>
+                                <option>--add-exports</option>
+                                <option>javafx.graphics/com.sun.javafx.scene.traversal=org.controlsfx.controls</option>
+                             </options>
                         </configuration>
                     </execution>
                 </executions>
